--- a/SampleLogin/app/src/main/res/layout/fragment_add_note.xml
+++ b/SampleLogin/app/src/main/res/layout/fragment_add_note.xml
@@ -8,7 +8,7 @@
 
 
     <com.google.android.material.floatingactionbutton.FloatingActionButton
-        android:id="@+id/ic_done"
+        android:id="@+id/btn_save"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:clickable="true"
