--- a/SampleLogin/app/src/main/res/navigation/nav_graph.xml
+++ b/SampleLogin/app/src/main/res/navigation/nav_graph.xml
@@ -22,5 +22,9 @@
         <action
             android:id="@+id/action_addNoteFragment_to_noteHomeFragment"
             app:destination="@id/noteHomeFragment" />
+       <!-- <argument
+            app:argType="com.example.samplelogin.db.Note"
+            app:nullable="true"
+            android:defaultValue="@null"/>-->
     </fragment>
 </navigation>
